# rust_jni

./: build.gradle  settings.gradle
app/: build.gradle.kts
app/src/androidTest/java/com/mrtanrust_jni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/mrtan/rust_jni/: MainActivity.kt
app/src/main/java/com/mrtan/rust_jni/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/mrtanrust_jni/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
