[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.19.0" , default-features = false}
lazy_static = '1.4.0'
tokio = { version = "1.20.1", features = ["rt", "sync", "macros", "time"] }
tracing = "0.1.36"
tracing-subscriber = "0.3.15"
tracing-android = "0.2.0"
[profile.release]
lto = true

[lib]
name = "rust"
crate_type = ["staticlib", "dylib"]